# t-analyzer

./: .gitignore  LICENSE  README.md  backend_test.py  build_and_push_image.sh  dockerfile  run.sh  start.sh  stop.sh
cpp_modules/: CMakeLists.txt
cpp_modules/src/: CMakeLists.txt  main.cpp  video_processor.cpp
cpp_modules/src/common/: CMakeLists.txt
cpp_modules/src/common/log/: CMakeLists.txt
cpp_modules/src/common/log/include/: logging.hpp
cpp_modules/src/components/: CMakeLists.txt
cpp_modules/src/components/frameProcessor/: CMakeLists.txt
cpp_modules/src/components/frameProcessor/include/: FrameProcessor.hpp  types.hpp
cpp_modules/src/components/frameProcessor/src/: FrameProcessor.cpp
cpp_modules/src/components/frameQueue/: CMakeLists.txt
cpp_modules/src/components/frameQueue/include/: FrameQueue.hpp
cpp_modules/src/components/frameQueue/src/: FrameQueue.cpp
cpp_modules/src/components/videoReader/: CMakeLists.txt
cpp_modules/src/components/videoReader/include/: videoReader.hpp
cpp_modules/src/components/videoReader/src/: videoReader.cpp
cpp_modules/src/components/videoWriter/: CMakeLists.txt
cpp_modules/src/components/videoWriter/include/: videoWriter.hpp
cpp_modules/src/components/videoWriter/src/: videoWriter.cpp
cpp_modules/src/videoReader/: CMakeLists.txt
cpp_modules/src/videoReader/src/: videoReader.cpp
cpp_modules/src/videoWriter/: CMakeLists.txt
cpp_modules/src/videoWriter/src/: videoWriter.cpp
python_backend/: server.py
python_backend/models/CourtDetector/: CourtDetector.py
